--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Nurses -- Fiction'
+- GITenberg
 title: Nurse Elisia
 url: http://www.gutenberg.org/ebooks/40675
